<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:id="@+id/idWork"
        android:icon="@drawable/ic_work"
        android:title="@string/work_text"/>
    <item android:id="@+id/idResume"
        android:icon="@drawable/ic_resume"
        android:title="@string/resume_creating"/>
    <item android:id="@+id/idTraining"
        android:icon="@drawable/ic_training"
        android:title="@string/trainging_text"/>
    <item android:id="@+id/idSources"
        android:icon="@drawable/ic_source"
        android:title="@string/sources_text"/>
    <item android:id="@+id/idProject"
        android:icon="@drawable/ic_about"
        android:title="@string/about_project_text"/>

</menu>