<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="0.83:1"
                android:background="@drawable/man"
                android:id="@+id/image"
                app:layout_constraintTop_toBottomOf="@id/toolBar" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/toolBar"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="?actionBarSize">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.5"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/menuButton"
                    android:background="@drawable/logo_transparent"
                    app:layout_constraintDimensionRatio="1:0.117"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/langLayout"
                    android:padding="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lang_text"
                        android:textSize="18sp"
                        android:textColor="#00BBC7"
                        android:fontFamily="@font/bill"
                        android:id="@+id/langText"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:src="@drawable/ic_arrow_bottom"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_menu"
                    android:padding="8dp"
                    android:id="@+id/menuButton"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.95"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/blueLayout"
                android:background="@drawable/bg_layout">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.7"
                    android:text="@string/find_your_work_task"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:lines="2"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:fontFamily="@font/bill"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:id="@+id/idFindWork"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/bill"
                    android:textColor="#fff"
                    android:id="@+id/largeText"
                    android:layout_marginTop="8dp"
                    android:justificationMode="inter_word"
                    app:layout_constraintTop_toBottomOf="@id/idFindWork"
                    android:text="@string/big_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintRight_toRightOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.3"
                    android:background="@drawable/bg_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/do_text"
                    android:textAllCaps="false"
                    android:paddingHorizontal="8dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/largeText"
                    android:elevation="8dp"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/bill"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintRight_toLeftOf="@id/idCalculator"
                    android:id="@+id/idDoTest"
                    android:textColor="#fff"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.3"
                    android:background="@drawable/bg_button_un"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toRightOf="@id/idDoTest"
                    android:text="@string/calculator_text"
                    android:elevation="8dp"
                    app:layout_constraintTop_toBottomOf="@id/largeText"
                    android:textAllCaps="false"
                    android:layout_marginVertical="16dp"
                    android:paddingHorizontal="8dp"
                    android:fontFamily="@font/bill"
                    android:id="@+id/idCalculator"
                    android:textColor="#00BBC7"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolzarb_kasblar_text"
                app:layout_constraintTop_toBottomOf="@id/image"
                android:textSize="18sp"
                android:id="@+id/currentWorkButton"
                android:fontFamily="@font/bill"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                android:background="@drawable/bg_button_blue"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/sources_text"
                android:textAllCaps="false"
                android:paddingHorizontal="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/currentWorkButton"
                android:elevation="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/bill"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/idSourceButton"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="14sp"
                android:fontFamily="@font/bill"
                android:id="@+id/progressText"
                app:layout_constraintLeft_toLeftOf="@id/idSourceButton"
                app:layout_constraintTop_toBottomOf="@id/idSourceButton"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toRightOf="@id/idSourceButton"
                android:layout_marginBottom="2dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/layout"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_bottom"
            android:padding="16dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.5"
                android:layout_marginStart="16dp"
                android:id="@+id/imageBottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/logo_transparent"
                app:layout_constraintDimensionRatio="1:0.117"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageBottom"
                android:layout_marginTop="2dp"
                android:text="@string/info_text"
                app:layout_constraintLeft_toLeftOf="@id/imageBottom"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:id="@+id/infoText"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/infoText"
                android:layout_marginTop="2dp"
                android:text="@string/copyright_2022_c_text"
                app:layout_constraintLeft_toLeftOf="@id/imageBottom"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:id="@+id/copyText"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/copyText"
                android:layout_marginTop="2dp"
                android:text="@string/e_mail_prof_itsm_uz_text"
                app:layout_constraintLeft_toLeftOf="@id/imageBottom"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:id="@+id/emailText"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/emailText"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="@id/imageBottom"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/youtube"
                android:text="@string/youtube_text"
                android:drawablePadding="8dp"
                app:drawableLeftCompat="@drawable/ic_youtube" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/youtube"
                android:textColor="@color/black"
                android:text="@string/instagram_text"
                android:drawablePadding="8dp"
                app:drawableLeftCompat="@drawable/ic_instagram"
                android:layout_marginTop="2dp"
                app:layout_constraintLeft_toLeftOf="@id/imageBottom"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:id="@+id/instagram"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/instagram"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"
                app:layout_constraintLeft_toLeftOf="@id/imageBottom"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:id="@+id/facebook"
                android:text="@string/facebook_text"
                android:drawablePadding="8dp"
                app:drawableLeftCompat="@drawable/ic_facebook" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>